Gradiant background in color menus

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <gl_canvas id="glCanvas"></gl_canvas>
             <div id="infoBox">
-              Add menu and emitter by pressing this button
+              Add emitter by pressing this button
               <button v-on:click="createMenu">Add</button>
               <div id="errorBox" hidden></div>
             </div>
